# now

./: .gitignore  .gitmodules  CMakeLists.txt  now.pasta
.claude/: settings.local.json
.github/actions/setup-now/: action.yml
.github/workflows/: build.yml  ci.yml  now-build.yml  release.yml
cli/ci/: now.pasta
cli/ci/src/main/h/internal/: now_ci.h
cli/src/main/c/: now_ci.c  now_watch.c
cli/tui/src/main/h/internal/: now_tui.h
cli/watch/: now.pasta
components/cli/: now.pasta
components/cli/app/: now.pasta
components/cli/app/src/main/c/: main.c
components/cli/tui/: now.pasta
components/enterprise/src/main/c/: now_repro.c  now_sbom.c  now_trust.c
components/enterprise/src/main/h/internal/: now_graph.h
components/export/: now.pasta
components/export/bazel/: now.pasta
components/export/bazel/src/main/c/: now_export_bazel.c
components/export/cmake/: now.pasta
components/export/cmake/src/main/c/: now_export_cmake.c  now_import_cmake.c
components/export/make/: now.pasta
components/export/make/src/main/c/: now_export_make.c
components/export/maven/: now.pasta
components/export/meson/: now.pasta
components/export/meson/src/main/c/: now_export_meson.c
components/export/src/main/h/internal/: now_export.h  now_export_common.h
components/plugins/core/: now.pasta
components/plugins/core/src/main/c/: now_plugin.c
components/plugins/registry/src/main/c/: now_plugin_registry.c
components/plugins/registry/src/main/h/internal/: now_plugin_registry.h
crypto/: now.pasta
docs/: ci-downstream.md  github-ci-setup.md  migration-guide.md  priorities.md  status.md
enterprise/: now.pasta
enterprise/src/main/h/internal/: now_advisory.h
export/buildtools/: now.pasta
guides/: user-guide.md
lib/apennines/: now.pasta
lib/apennines/src/main/c/: addr.c  asn1_der.c  base.c  bigint.c  cipher.c  compress.c  ct.c  dns.c  ec.c  ecdsa.c  fwatch.c  h2.c  hash.c  http.c  https_client.c  pem.c  pki.c  rsa.c  tcp.c  threadpool.c  tls.c  x509.c
lib/apennines/src/main/c/t1/buffer/: buf.c
lib/apennines/src/main/c/t1/random/: entropy.c
lib/apennines/src/main/c/t2/crypto/: cipher.c  rsa.c  secret.c
lib/apennines/src/main/c/t2/net/: addr.c
lib/apennines/src/main/c/t4/net/: http_client.c
lib/apennines/src/main/h/apennines/: export.h  types.h
lib/apennines/src/main/h/apennines/t1/buffer/: buf.h
lib/apennines/src/main/h/apennines/t1/random/: entropy.h
lib/apennines/src/main/h/apennines/t2/compress/: compress.h
lib/apennines/src/main/h/apennines/t2/crypto/: cipher.h  ct.h  ec.h  ecdsa.h  hash.h  rsa.h  secret.h  x509.h
lib/apennines/src/main/h/apennines/t2/encoding/: asn1_der.h  base.h  pem.h
lib/apennines/src/main/h/apennines/t2/math/bigint/: bigint.h
lib/apennines/src/main/h/apennines/t2/net/: addr.h
lib/apennines/src/main/h/apennines/t3/async/: threadpool.h
lib/apennines/src/main/h/apennines/t3/crypto/: pki.h
lib/apennines/src/main/h/apennines/t3/fs/: fwatch.h
lib/apennines/src/main/h/apennines/t3/net/: dns.h  h2.h  http.h  tcp.h  tls.h
lib/apennines/src/main/h/apennines/t4/net/: http_client.h  http_server.h  https_client.h
lib/now-cli/: now.pasta
lib/now-enterprise/src/main/c/: now_advisory.c  now_repro.c
lib/now-enterprise/src/main/h/internal/: now_audit.h  now_repro.h
lib/now-export/: now.pasta
lib/now-export/src/main/h/internal/: now_export.h
lib/pico_http/: now.pasta
lib/pico_http/src/main/c/: pico_http.c  pico_http_apennines.c  pico_transport.c  pico_ws.c
lib/pico_http/src/main/h/: pico_ws.h
lib/pico_http/src/main/h/internal/: pico_internal.h
plugins/: now.pasta
plugins/core/src/main/h/internal/: now_plugin.h
plugins/registry/: now.pasta
scripts/: refresh-apennines-vendor.sh
src/main/c/: main.c  now.c  now_arch.c  now_audit.c  now_auth.c  now_build.c  now_cache.c  now_dirwalk.c  now_ed25519.c  now_export.c  now_fs.c  now_graph.c  now_lang.c  now_layer.c  now_manifest.c  now_maven.c  now_module.c  now_package.c  now_plugin.c  now_plugin_registry.c  now_pom.c  now_procure.c  now_remote.c  now_sbom.c  now_trust.c  now_tui.c  now_watch.c  now_workspace.c  pico_h2.c  pico_http.c  pico_http_apennines.c  pico_transport.c  pico_ws.c
src/main/h/: pasta.h  pico_http.h  pico_ws.h
src/main/h/internal/: now_arch.h  now_auth.h  now_build.h  now_cache.h  now_dirwalk.h  now_export.h  now_fs.h  now_manifest.h  now_module.h  now_package.h  now_pom.h  now_remote.h  now_sbom.h  now_trust.h  now_tui.h  now_watch.h  now_workspace.h  pico_h2.h  pico_internal.h
src/test/c/: now_test.c
src/test/resources/: pom_basic.xml  pom_deps.xml
src/test/resources/goffi/: now.pasta
src/test/resources/goffi/src/main/c/: ffi.go  main.c
src/test/resources/hello_java/: now.pasta
src/test/resources/hello_java/src/main/java/: Hello.java
src/test/resources/hello_java/src/test/java/: HelloTest.java
src/test/resources/rustffi/: now.pasta
src/test/resources/rustffi/src/main/c/: main.c
